init: django-admin startproject market_prj

--- a/django_travel_agency_website/pyproject.toml
+++ b/django_travel_agency_website/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Glukharev Oleg Anatolyevich <olegglukharev92@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+Django = "^4.1.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
